[KAMINARI-1] Authentication boilerplate has been added
Issue: KAMINARI-1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
         "noFallthroughCasesInSwitch": false,
         "moduleResolution": "node",
         "baseUrl": "./src",
-        "paths": {}
+        "paths": {
+            "@admin/*": ["admin/*"],
+            "@config/*": ["config/*"],
+            "@toolkit/*": ["toolkit/*"]
+        }
     }
 }
