[KAMINARI-3] User management section has been added
Issue: KAMINARI-3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         "paths": {
             "@admin/*": ["admin/*"],
             "@config/*": ["config/*"],
+            "@exceptions/*": ["exceptions/*"],
             "@toolkit/*": ["toolkit/*"]
         }
     }
