[KAMINARI-7] Settings and its management section has been added
Issue: KAMINARI-7

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
             "@admin/*": ["admin/*"],
             "@config/*": ["config/*"],
             "@exceptions/*": ["exceptions/*"],
+            "@settings/*": ["settings/*"],
             "@toolkit/*": ["toolkit/*"]
         }
     }
