[KAMINARI-7] Migrator has been added
Issue: KAMINARI-7

--- a/.env.sample
+++ b/.env.sample
@@ -18,6 +18,7 @@ KAMINARI_ROOT_USER_EMAIL='root@toor.com'
 KAMINARI_ROOT_USER_PASSWORD='toor'
 KAMINARI_SKIP_ROOT_USER_CREATION=0
 KAMINARI_SQL_CONSOLE_PASSWORD='console-sql'
+KAMINARI_SKIP_DB_MIGRATION=0
 
 POSTGRES_HOST='localhost'
 POSTGRES_PORT=5432
