--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
             "@admin/*": ["admin/*"],
             "@config/*": ["config/*"],
             "@exceptions/*": ["exceptions/*"],
+            "@migrator/*": ["migrator/*"],
             "@settings/*": ["settings/*"],
             "@toolkit/*": ["toolkit/*"]
         }
