--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "migrate:dev": "prisma migrate dev",
+        "migrate:dev:create": "prisma migrate dev --create-only",
+        "migrate:deploy": "npx prisma migrate deploy",
+        "migrate:reset": "npx prisma migrate reset",
+        "migrate:resolve": "npx prisma migrate resolve",
+        "prisma:generate": "npx prisma generate",
+        "prisma:studio": "npx prisma studio"
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
