[KAMINARI-9] Comments posting and deletion have been added
Issue: KAMINARI-9

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,10 @@
         "baseUrl": "./src",
         "paths": {
             "@admin/*": ["admin/*"],
+            "@comments/*": ["comments/*"],
             "@config/*": ["config/*"],
             "@exceptions/*": ["exceptions/*"],
+            "@forum/*": ["forum/*"],
             "@migrator/*": ["migrator/*"],
             "@settings/*": ["settings/*"],
             "@toolkit/*": ["toolkit/*"]
