--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@nestjs/config": "^3.1.1",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
-        "@prisma/client": "^5.7.1",
+        "@prisma/client": "^5.8.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "cookie-parser": "^1.4.6",
@@ -37,13 +37,17 @@
         "filesize": "^10.1.0",
         "fs-extra": "^11.2.0",
         "he": "^1.2.0",
+        "image-size": "^1.1.1",
         "joi": "^17.11.0",
+        "lodash": "^4.17.21",
         "luxon": "^3.4.4",
         "nestjs-form-data": "^1.9.5",
         "nestjs-ip-filter": "^0.2.0",
         "nestjs-real-ip": "^3.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
+        "sharp": "^0.33.2",
+        "tripcode": "^4.0.0",
         "uuidv4": "^6.2.13"
     },
     "devDependencies": {
@@ -58,6 +62,7 @@
         "@types/fs-extra": "^11.0.4",
         "@types/he": "^1.2.3",
         "@types/jest": "^29.5.2",
+        "@types/lodash": "^4.14.202",
         "@types/luxon": "^3.4.0",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.3.1",
@@ -70,7 +75,7 @@
         "eslint-plugin-prettier": "^5.0.0",
         "jest": "^29.5.0",
         "prettier": "^3.0.0",
-        "prisma": "^5.7.1",
+        "prisma": "^5.8.1",
         "source-map-support": "^0.5.21",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
